# quicktime_video_hack

llm/: 01_summary.md  02_protocol.puml  03_handshake.cpp  04_statemachine.md  04_statemachine.puml  05_clocksync.md  06_implementation.md  07_spec_outline.md  08_spec_01_intro.md  09_spec_02_usblevel.md  10_spec_03_packetstructure.md  11_spec_04_messages.md  12_spec_05_datastructures.md  13_spec_06_clocksync.md  14_spec_07_session.md  15_spec_08_error.md  16_spec_09_appendix.md  CMakeLists.txt  README.md  a6  aa6  gather01_files.sh
log/: 513_direct_access_to_media_encoding_and_decoding.txt
